--- a/carta-chiringuito.html
+++ b/carta-chiringuito.html
@@ -38,6 +38,11 @@ body{
 <div class="header">
 Carta Chiringuito Isla Blanca
 </div>
+<div style="text-align:center; margin-top:-10px;">
+  <a href="index.html" style="color:white; text-decoration:none; font-size:16px;">
+    ← Volver al inicio
+  </a>
+</div>
 
 <div class="carta">
     <img src="cartas/chiringuito_01.jpg">
