--- a/carta-restaurante.html
+++ b/carta-restaurante.html
@@ -37,6 +37,12 @@ body{
 <div class="header">
 Carta Restaurante Isla Blanca
 </div>
+<div style="text-align:center; margin-top:-10px;">
+  <a href="index.html" style="color:#0e3b4f; text-decoration:none; font-size:16px;">
+    ← Volver al inicio
+  </a>
+</div>
+
 
 <div class="carta">
     <img src="cartas/restaurante_01.jpg">
