--- a/carta-restaurante.html
+++ b/carta-restaurante.html
@@ -45,19 +45,19 @@ Carta Restaurante Isla Blanca
 
 
 <div class="carta">
-    <img src="cartas/restaurante_01.jpg">
-    <img src="cartas/restaurante_02.jpg">
-    <img src="cartas/restaurante_03.jpg">
-    <img src="cartas/restaurante_04.jpg">
-    <img src="cartas/restaurante_05.jpg">
-    <img src="cartas/restaurante_06.jpg">
-    <img src="cartas/restaurante_07.jpg">
-    <img src="cartas/restaurante_08.jpg">
-    <img src="cartas/restaurante_09.jpg">
-    <img src="cartas/restaurante_10.jpg">
-    <img src="cartas/restaurante_11.jpg">
-    <img src="cartas/restaurante_12.jpg">
-    <img src="cartas/restaurante_13.jpg">
+    <img loading="lazy" src="cartas/restaurante_01.jpg">
+    <img loading="lazy" src="cartas/restaurante_02.jpg">
+    <img loading="lazy" src="cartas/restaurante_03.jpg">
+    <img loading="lazy" src="cartas/restaurante_04.jpg">
+    <img loading="lazy" src="cartas/restaurante_05.jpg">
+    <img loading="lazy" src="cartas/restaurante_06.jpg">
+    <img loading="lazy" src="cartas/restaurante_07.jpg">
+    <img loading="lazy" src="cartas/restaurante_08.jpg">
+    <img loading="lazy" src="cartas/restaurante_09.jpg">
+    <img loading="lazy" src="cartas/restaurante_10.jpg">
+    <img loading="lazy" src="cartas/restaurante_11.jpg">
+    <img loading="lazy" src="cartas/restaurante_12.jpg">
+    <img loading="lazy" src="cartas/restaurante_13.jpg">
 </div>
 
 </body>
