--- a/carta-chiringuito.html
+++ b/carta-chiringuito.html
@@ -45,8 +45,8 @@ Carta Chiringuito Isla Blanca
 </div>
 
 <div class="carta">
-    <img src="cartas/chiringuito_01.jpg">
-    <img src="cartas/chiringuito_02.jpg">
+    <img loading="lazy" src="cartas/chiringuito_01.jpg">
+    <img loading="lazy" src="cartas/chiringuito_02.jpg">
 </div>
 
 </body>
