--- a/contacto.html
+++ b/contacto.html
@@ -100,12 +100,12 @@ a.back{
     <iframe
       loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"
-      src="https://www.google.com/maps?q=Paseo%20Mediterr%C3%A1neo%20B2%20Playa%20Las%20Ventanicas&output=embed">
+        src="https://www.google.com/maps?q=0xd7ad81c1a8a5d9d:0x9cf28e115b774955&output=embed"
     </iframe>
 
     <div class="actions">
       <a class="btn" target="_blank" rel="noopener"
-         href="https://www.google.com/maps/search/?api=1&query=Paseo%20Mediterr%C3%A1neo%20B2%20Playa%20Las%20Ventanicas">
+        href="https://www.google.com/maps/place/?q=place_id:ChIJ2dqlqMGBdA0RUVl3WxGOctk"
         🧭 Abrir en Google Maps
       </a>
     </div>
