--- a/contacto.html
+++ b/contacto.html
@@ -100,12 +100,12 @@ a.back{
     <iframe
       loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"
-      src="https://www.google.com/maps?q=0xd7ad81c1a8a5d9d:0x9cf28e115b774955&output=embed">
+      src="https://www.google.com/maps?cid=11309257819480869205&output=embed">
     </iframe>
 
     <div class="actions">
       <a class="btn" target="_blank" rel="noopener"
-         href="https://www.google.com/maps/place/?q=place_id:ChIJ2dqlqMGBdA0RUVl3WxGOctk">
+         href="https://www.google.com/maps?cid=11309257819480869205">
         🧭 Abrir en Google Maps
       </a>
     </div>
