--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@ ISLA BLANCA
         <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e">
         <a href="carta-chiringuito.html">CHIRINGUITO</a>
     </div>
-
+    <div class="card">
+        <img src="https://images.unsplash.com/photo-1526779259212-939e64788e3c">
+        <a href="contacto.html">RESERVAS</a>
+    </div>
 </div>
 
 </div>
