--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ ISLA BLANCA
         <a href="carta-chiringuito.html">CHIRINGUITO</a>
     </div>
     <div class="card">
-        <img src="https://images.unsplash.com/photo-1526779259212-939e64788e3c">
+        <img src="https://images.unsplash.com/photo-1632298054792-94d2acf0acfd?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
         <a href="contacto.html">RESERVAS</a>
     </div>
 </div>
