--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@ nav a{
 <body>
 
 <header>
-<img src="logo_azul_transparente.png" style="height:80px;">
-ISLA BLANCA
+<img src="logo_blanco_transparente.png" style="height:80px;">
 </header>
 
 <nav>
