--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ header{
 
     <div class="card">
         <img src="https://images.unsplash.com/photo-1559339352-11d035aa65de">
-        <a href="carta-restaurante.html">RESTAURANTE</a>
+        <a href="carta.html">RESTAURANTE</a>
     </div>
 
     <div class="card">
