--- a/carta-en.html
+++ b/carta-en.html
@@ -45,20 +45,13 @@ Carta Restaurante Isla Blanca
 
 
 <div class="carta">
-    <img loading="lazy" src="cartas/restaurante_01.jpg">
-    <img loading="lazy" src="cartas/restaurante_02.jpg">
-    <img loading="lazy" src="cartas/restaurante_03.jpg">
-    <img loading="lazy" src="cartas/restaurante_04.jpg">
-    <img loading="lazy" src="cartas/restaurante_05.jpg">
-    <img loading="lazy" src="cartas/restaurante_06.jpg">
-    <img loading="lazy" src="cartas/restaurante_07.jpg">
-    <img loading="lazy" src="cartas/restaurante_08.jpg">
-    <img loading="lazy" src="cartas/restaurante_09.jpg">
-    <img loading="lazy" src="cartas/restaurante_10.jpg">
-    <img loading="lazy" src="cartas/restaurante_11.jpg">
-    <img loading="lazy" src="cartas/restaurante_12.jpg">
-    <img loading="lazy" src="cartas/restaurante_13.jpg">
+  <img loading="lazy" src="cartas/restaurante_01.jpg" alt="Menu English 1">
+  <img loading="lazy" src="cartas/restaurante_06.jpg" alt="Menu English 2">
+  <img loading="lazy" src="cartas/restaurante_07.jpg" alt="Menu English 3">
+  <img loading="lazy" src="cartas/restaurante_08.jpg" alt="Menu English 4">
+  <img loading="lazy" src="cartas/restaurante_09.jpg" alt="Menu English 5">
 </div>
+
 
 </body>
 </html>
