--- a/carta-fr.html
+++ b/carta-fr.html
@@ -45,19 +45,14 @@ Carta Restaurante Isla Blanca
 
 
 <div class="carta">
-    <img loading="lazy" src="cartas/restaurante_01.jpg">
-    <img loading="lazy" src="cartas/restaurante_02.jpg">
-    <img loading="lazy" src="cartas/restaurante_03.jpg">
-    <img loading="lazy" src="cartas/restaurante_04.jpg">
-    <img loading="lazy" src="cartas/restaurante_05.jpg">
-    <img loading="lazy" src="cartas/restaurante_06.jpg">
-    <img loading="lazy" src="cartas/restaurante_07.jpg">
-    <img loading="lazy" src="cartas/restaurante_08.jpg">
-    <img loading="lazy" src="cartas/restaurante_09.jpg">
-    <img loading="lazy" src="cartas/restaurante_10.jpg">
-    <img loading="lazy" src="cartas/restaurante_11.jpg">
-    <img loading="lazy" src="cartas/restaurante_12.jpg">
-    <img loading="lazy" src="cartas/restaurante_13.jpg">
+<div class="carta">
+  <img loading="lazy" src="cartas/restaurante_1.jpg" alt="Menu Français 1">
+  <img loading="lazy" src="cartas/restaurante_10.jpg" alt="Menu Français 2">
+  <img loading="lazy" src="cartas/restaurante_11.jpg" alt="Menu Français 3">
+  <img loading="lazy" src="cartas/restaurante_12.jpg" alt="Menu Français 4">
+  <img loading="lazy" src="cartas/restaurante_13.jpg" alt="Menu Français 5">
+</div>
+
 </div>
 
 </body>
