--- a/carta-chiringuito.html
+++ b/carta-chiringuito.html
@@ -27,8 +27,16 @@ body{
     display:block;
     margin:25px auto;
     border-radius:12px;
-    box-shadow:0 8px 25px rgba(0,0,0,0.45);
+    box-shadow:0 8px 25px rgba(0,0,0,0.25);
+    transition:transform 0.3s ease, box-shadow 0.3s ease;
 }
+
+/* al tocar */
+.carta img:active{
+    transform:scale(1.03);
+    box-shadow:0 18px 40px rgba(0,0,0,0.4);
+}
+
 </style>
 
 </head>
