--- a/carta.html
+++ b/carta.html
@@ -35,7 +35,18 @@ h1{
     text-decoration:none;
     color:white;
     background:#0e3b4f;
+    transition:all 0.25s ease;
 }
+
+.boton:hover{
+    transform:scale(1.07);
+    box-shadow:0 10px 25px rgba(0,0,0,0.35);
+}
+
+.boton:active{
+    transform:scale(0.95);
+}
+
 </style>
 
 </head>
