--- a/carta-chiringuito.html
+++ b/carta-chiringuito.html
@@ -2,6 +2,7 @@
 
 <html lang="es">
 <head>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Carta Chiringuito Isla Blanca</title>
