--- a/carta-chiringuito.html
+++ b/carta-chiringuito.html
@@ -38,6 +38,10 @@ body{
     box-shadow:0 18px 40px rgba(0,0,0,0.4);
 }
 
+h1, h2, .header{
+    font-family: 'Playfair Display', serif;
+    letter-spacing:1px;
+}
 </style>
 
 </head>
