--- a/carta-en.html
+++ b/carta-en.html
@@ -36,6 +36,10 @@ body{
     transform:scale(1.03);
     box-shadow:0 18px 40px rgba(0,0,0,0.4);
 }
+h1, h2, .header{
+    font-family: 'Playfair Display', serif;
+    letter-spacing:1px;
+}
 
 </style>
 
