--- a/carta.html
+++ b/carta.html
@@ -47,6 +47,10 @@ h1{
 .boton:active{
     transform:scale(0.95);
 }
+h1, h2, .header{
+    font-family: 'Playfair Display', serif;
+    letter-spacing:1px;
+}
 
 </style>
 
