--- a/contacto.html
+++ b/contacto.html
@@ -69,6 +69,11 @@ a.back{
   color:#0e3b4f;
   font-weight:bold;
 }
+h1, h2, .header{
+    font-family: 'Playfair Display', serif;
+    letter-spacing:1px;
+}
+
 </style>
 </head>
 
