--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@ header{
 .card a:active{
     transform:translate(-50%,-50%) scale(0.95);
 }
+h1, h2, .header{
+    font-family: 'Playfair Display', serif;
+    letter-spacing:1px;
+}
 
 </style>
 
