--- a/carta-chiringuito.html
+++ b/carta-chiringuito.html
@@ -16,10 +16,10 @@ body{
 
 .header{
     text-align:center;
-    color:white;
-    padding:25px;
-    font-size:28px;
-    font-weight:bold;
+    padding:18px;
+    font-size:34px;
+    font-weight:600;
+    letter-spacing:2px;
 }
 
 .carta img{
