--- a/carta-en.html
+++ b/carta-en.html
@@ -16,9 +16,10 @@ body{
 
 .header{
     text-align:center;
-    padding:25px;
-    font-size:28px;
-    font-weight:bold;
+    padding:18px;
+    font-size:34px;
+    font-weight:600;
+    letter-spacing:2px;
 }
 
 .carta img{
