--- a/carta.html
+++ b/carta.html
@@ -8,6 +8,14 @@
 <title>Carta Restaurante</title>
 
 <style>
+.header{
+    text-align:center;
+    padding:18px;
+    font-size:34px;
+    font-weight:600;
+    letter-spacing:2px;
+}
+
 body{
     margin:0;
     font-family:Arial, Helvetica, sans-serif;
