--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,15 @@
 <title>Contacto - Isla Blanca</title>
 
 <style>
+
+  .header{
+    text-align:center;
+    padding:18px;
+    font-size:34px;
+    font-weight:600;
+    letter-spacing:2px;
+}
+
 body{
   margin:0;
   font-family:Arial, Helvetica, sans-serif;
