--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="icon" type="image/png" href="logo_blanco_transparente.png">
 
 <style>
+    
 body{
     margin:0;
     font-family:Arial, Helvetica, sans-serif;
@@ -22,6 +23,14 @@ header{
     text-align:center;
     font-size:28px;
     font-weight:bold;
+}
+    
+.header{
+    text-align:center;
+    padding:18px;
+    font-size:34px;
+    font-weight:600;
+    letter-spacing:2px;
 }
 
 .contenido{
