--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@ h1, h2, .header{
 <body>
 
 <header>
-<img src="logo_blanco_transparente.png" style="height:80px;">
+    <img src="logo_blanco_transparente.png" style="height:85px;">
+    <div style="color:white; font-family:'Playfair Display', serif; font-size:18px; margin-top:5px; letter-spacing:2px;">
+        Restaurante & Chiringuito Mediterráneo
+    </div>
 </header>
 
 <div class="contenido">
