--- a/carta-chiringuito.html
+++ b/carta-chiringuito.html
@@ -16,11 +16,15 @@ body{
 
 .header{
     text-align:center;
-    padding:18px;
+    background:white;
+    color:#0e3b4f;
+    padding:20px;
     font-size:34px;
     font-weight:600;
     letter-spacing:2px;
+    box-shadow:0 3px 10px rgba(0,0,0,0.15);
 }
+
 
 .carta img{
     width:100%;
