--- a/carta-chiringuito.html
+++ b/carta-chiringuito.html
@@ -16,8 +16,7 @@ body{
 
 .header{
     text-align:center;
-    background:white;
-    color:#0e3b4f;
+    color:white;
     padding:20px;
     font-size:34px;
     font-weight:600;
