--- a/carta-en.html
+++ b/carta-en.html
@@ -16,10 +16,11 @@ body{
 
 .header{
     text-align:center;
-    padding:18px;
+    padding:20px;
     font-size:34px;
     font-weight:600;
     letter-spacing:2px;
+    box-shadow:0 3px 10px rgba(0,0,0,0.15);
 }
 
 .carta img{
