--- a/carta.html
+++ b/carta.html
@@ -67,7 +67,9 @@ h1, h2, .header{
 
 <body>
 
-<h1>Elige idioma / Choose language / Choisissez la langue</h1>
+<div class="header">
+Elige idioma / Choose language / Choisissez la langue
+</div>
 
 <div class="idiomas">
     <a class="boton" href="carta-es.html">🇪🇸 Español</a>
