--- a/contacto.html
+++ b/contacto.html
@@ -87,7 +87,9 @@ h1, h2, .header{
 </head>
 
 <body>
-<header>Contacto - Isla Blanca</header>
+<div style="color:white; font-family:'Playfair Display', serif; font-size:18px; margin-top:5px; letter-spacing:2px;">
+        Contacto - Isla Blanca
+    </div>
 
 <div class="container">
 
