--- a/contacto.html
+++ b/contacto.html
@@ -10,6 +10,7 @@
 
   .header{
     text-align:center;
+    color: white;
     padding:18px;
     font-size:34px;
     font-weight:600;
@@ -87,9 +88,9 @@ h1, h2, .header{
 </head>
 
 <body>
-<div style="color:white; font-family:'Playfair Display', serif; font-size:18px; margin-top:5px; letter-spacing:2px;">
-        Contacto - Isla Blanca
-    </div>
+<div class="header">
+Contacto - Isla Blanca
+</div>
 
 <div class="container">
 
